--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev ./src/index.ts",
-    "start": "node ./build/index.js"
+    "start": "node ./build/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -25,7 +26,11 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.3.2",
+    "@types/pg": "^8.6.1",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
+    "supertest": "^6.1.3",
+    "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
