--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
     "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
