Added example environment variables

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,7 @@
-APP_PORT=port-value
+# API
+APP_PORT=port-number
+# PostgreSQL
+PG_HOST=your-host
+PG_USER=your-user
+PG_PASSWORD=your-password
+PG_DB=your-database
