Environment example updated

--- a/.example.env
+++ b/.example.env
@@ -2,6 +2,7 @@
 APP_PORT=port-number
 # PostgreSQL
 PG_HOST=your-host
+PG_PORT=your-port
 PG_USER=your-user
 PG_PASSWORD=your-password
 PG_DB=your-database
