--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
