--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0",
