Environment variables example updated

--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,15 @@
 # API
 APP_PORT=port-number
+IS_APP_IN_PRODUCTION=boolean
 # PostgreSQL
 PG_HOST=your-host
 PG_PORT=your-port
 PG_USER=your-user
 PG_PASSWORD=your-password
 PG_DB=your-database
+# Development Database
+PG_HOST_DEV=your-dev-host
+PG_PORT_DEV=your-dev-port
+PG_USER_DEV=your-dev-user
+PG_PASSWORD_DEV=your-dev-password
+PG_DB_DEV=your-dev-db
