Connection refactored again

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,6 @@
 # API
 APP_PORT=port-number
-IS_APP_IN_PRODUCTION=boolean
+APP_MODE=production || development
 # PostgreSQL
 PG_HOST=your-host
 PG_PORT=your-port
