Added 2nd tsconfig file, for compilating files. First one is now reserved to compiler word checking. Build script changed to support the new tsconfig file.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Nathan Murillo <nathanmurillodeoliveira@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "test": "jest",
     "dev": "ts-node-dev ./src/index.ts",
     "migrate": "ts-node ./src/scripts/runMigrations.ts",
