Secret added; .env file updated to support the secret addition

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,7 @@
 # API
 APP_PORT=port-number
 APP_MODE=production || development
+APP_SECRET=your-secret-here
 # PostgreSQL
 PG_HOST=your-host
 PG_PORT=your-port
