.env update for more clarity

--- a/.example.env
+++ b/.example.env
@@ -2,7 +2,7 @@
 APP_PORT=port-number
 APP_MODE=production || development # Set between production or development database. Any string different betweeen those will throw an error
 APP_SECRET=your-secret-here # Set the secret string to sign the JWT tokens
-JWT_TOKEN_EXPIRES_IN=time-to-expire # Default value is 48h
+JWT_TOKEN_EXPIRES_IN=time-to-expire # Default value is "48h", see JWT documentation
 # PostgreSQL
 PG_HOST=your-host
 PG_PORT=your-port
