--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
     "pg": "^8.6.0",
-    "slugify": "^1.6.0"
+    "slugify": "^1.6.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -32,6 +33,7 @@
     "@types/node": "^16.3.2",
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^27.0.6",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
