--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "knex": "^0.95.7",
     "pg": "^8.6.0",
     "slugify": "^1.6.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -34,6 +35,7 @@
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "jest": "^27.0.6",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
